# amrex-devtests

Launch/: GNUmakefile  main.cpp
ParallelReduce/: GNUmakefile
ParallelScan/: GNUmakefile
SPMD/: inputs  main.cpp
algoim_volume/: GNUmakefile  main.cpp
amr-wind-compute-zi/: GNUmakefile  main.cpp
aos_fab/: main.cpp
bisect/: main.cpp
chop_grids/: GNUmakefile  Make.package  helper.cpp  main.cpp  my_funcs.H  v0.cpp  v1.cpp  v2.cpp  v3.cpp  v4.cpp
ctoparallelfor/: GNUmakefile  main.cpp
curlcurl/: GNUmakefile  MyTest.H  MyTest.cpp  initProb.cpp  initProb_K.H  inputs
defrag/: main.cpp
device_callable/: main.cpp
devicetarget/: GNUmakefile  main.cpp
dpcpp_compile_time/: GNUmakefile  main.cpp
eb_marching_cubes/: cube.stl  main.cpp
eb_nodal_poisson/: GNUmakefile  Make.package  MyTest.cpp  initEB.cpp  inputs.2d
eb_rz_nodal_poisson/: GNUmakefile  MyTest.H  MyTest.cpp  initEB.cpp  inputs.2d
eb_sdf/: inputs.blade  main.cpp
eb_single_precision/: GNUmakefile  main.cpp
eb_stl/: cube.stl  inputs  main.cpp
eb_stl2/: GNUmakefile  main.cpp
eb_stl_turbine_blade/: GNUmakefile  main.cpp
edgefluxregister/: GNUmakefile  main.cpp
erf_fillpatcher/: GNUmakefile  Make.package  MyTest.H  MyTest.cpp  MyTestPlotfile.cpp  main.cpp
fab_atomicAdd/: GNUmakefile  main.cpp
fbsync/: GNUmakefile  main.cpp
fft/: GNUmakefile  main.cpp
fft_comp/: GNUmakefile  main.cpp
fill_boundary_corner/: GNUmakefile  main.cpp
fill_boundary_sph/: Notes.md  main.cpp
fillpatch_mf/: GNUmakefile  Make.package  amrcore.cpp  inputs  main.H  main.cpp
fillpatch_nl/: GNUmakefile  boxarray0.txt  boxarray1.txt  boxarray2.txt  boxarray3.txt  boxarray4.txt  boxarray5.txt  boxarraymf.txt  geometry0.txt  geometry1.txt  geometry2.txt  geometry3.txt  geometry4.txt  main.cpp
fillrandom/: main.cpp
fold/: main.cpp
fstream_read/: GNUmakefile  inmf_D_00000  inmf_H  main.cpp
gatherandpush/: Constants.H  EMParticleContainer.H  EMParticleContainer.cpp  EMParticleContainerInit.cpp  GNUmakefile  Make.package  em_pic_K.H  inputs  main.cpp
gsrb/: GNUmakefile  main.cpp  run.sh
hello_world/: main.cpp
hip_atomicadd/: GNUmakefile  main.cpp
hip_extern/: GNUmakefile  Make.package  init.H  init.cpp  main.cpp  par.H  par_def.H  work.H  work.cpp
hipace-mg/: HpMultiGrid.H  HpMultiGrid.cpp  Make.package  MyTest.H  MyTest.cpp  MyTestPlotfile.cpp  initProb.cpp  initProb_K.H
hipace_sum_boundary/: GNUmakefile  main.cpp
hpmgz/: HpMultiGrid.H  HpMultiGrid.cpp  Make.package  main.cpp
inline/: Make.package  main.cpp  test2.cpp
interpfaceregister/: GNUmakefile  main.cpp
iparser_long/: main.cpp
kokkos/: CMakeLists.txt  README.md  main.cpp
kokkos-reduction/: README.md  main.cpp
lambda_vs_macro/: GNUmakefile  main.cpp
launch/: GNUmakefile
lusolver/: main.cpp
(+197 files in other folders)
